punting requirements to minimal version numbers

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-cherrypy
-pyopenssl
-
-bottle==0.12.8
-influxdb
-flatdict
+cherrypy>=10.2.1
+pyopenssl>=17.0.0
+bottle>=0.12.13
+influxdb>=4.1.0
+flatdict>=1.2.0
