realms-team/solmanager#102 moving redundant App threads to Sol

--- a/solserver.config.sample
+++ b/solserver.config.sample
@@ -1,8 +1,4 @@
-[solmanager]
-# security
-token         = DEFAULT_SOLMANAGERTOKEN
-
-[solserver]
+[config]
 # connection
 tcpport       = 8081
 host          = 0.0.0.0
