fix solserver config sample

--- a/solserver.config.sample
+++ b/solserver.config.sample
@@ -1,12 +1,12 @@
 [config]
 # connection
-tcpport       = 8081
+solserver_tcpport = 8082
 host          = 0.0.0.0
 
 # security
-token         = DEFAULT_SOLSERVERTOKEN
-certfile      = solserver.cert
-privatekey    = solserver.ppk
+token                   = DEFAULT_SOLSERVERTOKEN
+solserver_certificate   = solserver.cert
+solserver_private_key   = solserver.ppk
 
 # files
 crashlogfile  = solserver.crashlog
@@ -16,3 +16,4 @@ backupfile    = solserver.backup
 influxdb_host = localhost
 influxdb_port = 8086
 influxdb_database = realms
+
